name:                opengl-wrangler
version:             0.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Gabríel Arthúr Pétursson
maintainer:          gabriel@system.is
copyright:           Copyright © 2014  Gabríel Arthúr Pétursson
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

library
  default-extensions:
    FlexibleContexts

  exposed-modules:
    Graphics.OpenGL
    Graphics.OpenGL.Basic
    Graphics.OpenGL.Types
    Graphics.OpenGL.Extension
    Graphics.OpenGL.Extension.ThreeDFX
    Graphics.OpenGL.Extension.ThreeDFX.Multisample
    Graphics.OpenGL.Extension.ThreeDFX.Tbuffer
    Graphics.OpenGL.Extension.ThreeDFX.TextureCompressionFXT1
    Graphics.OpenGL.Extension.AMD
    Graphics.OpenGL.Extension.AMD.BlendMinmaxFactor
    Graphics.OpenGL.Extension.AMD.Compressed3DCTexture
    Graphics.OpenGL.Extension.AMD.CompressedATCTexture
    Graphics.OpenGL.Extension.AMD.ConservativeDepth
    Graphics.OpenGL.Extension.AMD.DebugOutput
    Graphics.OpenGL.Extension.AMD.DepthClampSeparate
    Graphics.OpenGL.Extension.AMD.DrawBuffersBlend
    Graphics.OpenGL.Extension.AMD.GcnShader
    Graphics.OpenGL.Extension.AMD.GpuShaderInt64
    Graphics.OpenGL.Extension.AMD.InterleavedElements
    Graphics.OpenGL.Extension.AMD.MultiDrawIndirect
    Graphics.OpenGL.Extension.AMD.NameGenDelete
    Graphics.OpenGL.Extension.AMD.OcclusionQueryEvent
    Graphics.OpenGL.Extension.AMD.PerformanceMonitor
    Graphics.OpenGL.Extension.AMD.PinnedMemory
    Graphics.OpenGL.Extension.AMD.ProgramBinaryZ400
    Graphics.OpenGL.Extension.AMD.QueryBufferObject
    Graphics.OpenGL.Extension.AMD.SamplePositions
    Graphics.OpenGL.Extension.AMD.SeamlessCubemapPerTexture
    Graphics.OpenGL.Extension.AMD.ShaderAtomicCounterOps
    Graphics.OpenGL.Extension.AMD.ShaderStencilExport
    Graphics.OpenGL.Extension.AMD.ShaderTrinaryMinmax
    Graphics.OpenGL.Extension.AMD.SparseTexture
    Graphics.OpenGL.Extension.AMD.StencilOperationExtended
    Graphics.OpenGL.Extension.AMD.TextureTexture4
    Graphics.OpenGL.Extension.AMD.TransformFeedback3LinesTriangles
    Graphics.OpenGL.Extension.AMD.TransformFeedback4
    Graphics.OpenGL.Extension.AMD.VertexShaderLayer
    Graphics.OpenGL.Extension.AMD.VertexShaderTessellator
    Graphics.OpenGL.Extension.AMD.VertexShaderViewportIndex
    Graphics.OpenGL.Extension.ANDROID
    Graphics.OpenGL.Extension.ANDROID.ExtensionPackEs31a
    Graphics.OpenGL.Extension.ANGLE
    Graphics.OpenGL.Extension.ANGLE.DepthTexture
    Graphics.OpenGL.Extension.ANGLE.FramebufferBlit
    Graphics.OpenGL.Extension.ANGLE.FramebufferMultisample
    Graphics.OpenGL.Extension.ANGLE.InstancedArrays
    Graphics.OpenGL.Extension.ANGLE.PackReverseRowOrder
    Graphics.OpenGL.Extension.ANGLE.ProgramBinary
    Graphics.OpenGL.Extension.ANGLE.TextureCompressionDxt3
    Graphics.OpenGL.Extension.ANGLE.TextureCompressionDxt5
    Graphics.OpenGL.Extension.ANGLE.TextureUsage
    Graphics.OpenGL.Extension.ANGLE.TranslatedShaderSource
    Graphics.OpenGL.Extension.APPLE
    Graphics.OpenGL.Extension.APPLE.AuxDepthStencil
    Graphics.OpenGL.Extension.APPLE.ClientStorage
    Graphics.OpenGL.Extension.APPLE.ClipDistance
    Graphics.OpenGL.Extension.APPLE.ColorBufferPackedFloat
    Graphics.OpenGL.Extension.APPLE.CopyTextureLevels
    Graphics.OpenGL.Extension.APPLE.ElementArray
    Graphics.OpenGL.Extension.APPLE.Fence
    Graphics.OpenGL.Extension.APPLE.FloatPixels
    Graphics.OpenGL.Extension.APPLE.FlushBufferRange
    Graphics.OpenGL.Extension.APPLE.FramebufferMultisample
    Graphics.OpenGL.Extension.APPLE.ObjectPurgeable
    Graphics.OpenGL.Extension.APPLE.Rgb422
    Graphics.OpenGL.Extension.APPLE.RowBytes
    Graphics.OpenGL.Extension.APPLE.SpecularVector
    Graphics.OpenGL.Extension.APPLE.Sync
    Graphics.OpenGL.Extension.APPLE.Texture2DLimitedNpot
    Graphics.OpenGL.Extension.APPLE.TextureFormatBGRA8888
    Graphics.OpenGL.Extension.APPLE.TextureMaxLevel
    Graphics.OpenGL.Extension.APPLE.TexturePackedFloat
    Graphics.OpenGL.Extension.APPLE.TextureRange
    Graphics.OpenGL.Extension.APPLE.TransformHint
    Graphics.OpenGL.Extension.APPLE.VertexArrayObject
    Graphics.OpenGL.Extension.APPLE.VertexArrayRange
    Graphics.OpenGL.Extension.APPLE.VertexProgramEvaluators
    Graphics.OpenGL.Extension.APPLE.Ycbcr422
    Graphics.OpenGL.Extension.ARB
    Graphics.OpenGL.Extension.ARB.ES2Compatibility
    Graphics.OpenGL.Extension.ARB.ES31Compatibility
    Graphics.OpenGL.Extension.ARB.ES3Compatibility
    Graphics.OpenGL.Extension.ARB.ArraysOfArrays
    Graphics.OpenGL.Extension.ARB.BaseInstance
    Graphics.OpenGL.Extension.ARB.BindlessTexture
    Graphics.OpenGL.Extension.ARB.BlendFuncExtended
    Graphics.OpenGL.Extension.ARB.BufferStorage
    Graphics.OpenGL.Extension.ARB.ClEvent
    Graphics.OpenGL.Extension.ARB.ClearBufferObject
    Graphics.OpenGL.Extension.ARB.ClearTexture
    Graphics.OpenGL.Extension.ARB.ClipControl
    Graphics.OpenGL.Extension.ARB.ColorBufferFloat
    Graphics.OpenGL.Extension.ARB.Compatibility
    Graphics.OpenGL.Extension.ARB.CompressedTexturePixelStorage
    Graphics.OpenGL.Extension.ARB.ComputeShader
    Graphics.OpenGL.Extension.ARB.ComputeVariableGroupSize
    Graphics.OpenGL.Extension.ARB.ConditionalRenderInverted
    Graphics.OpenGL.Extension.ARB.ConservativeDepth
    Graphics.OpenGL.Extension.ARB.CopyBuffer
    Graphics.OpenGL.Extension.ARB.CopyImage
    Graphics.OpenGL.Extension.ARB.CullDistance
    Graphics.OpenGL.Extension.ARB.DebugOutput
    Graphics.OpenGL.Extension.ARB.DepthBufferFloat
    Graphics.OpenGL.Extension.ARB.DepthClamp
    Graphics.OpenGL.Extension.ARB.DepthTexture
    Graphics.OpenGL.Extension.ARB.DerivativeControl
    Graphics.OpenGL.Extension.ARB.DirectStateAccess
    Graphics.OpenGL.Extension.ARB.DrawBuffers
    Graphics.OpenGL.Extension.ARB.DrawBuffersBlend
    Graphics.OpenGL.Extension.ARB.DrawElementsBaseVertex
    Graphics.OpenGL.Extension.ARB.DrawIndirect
    Graphics.OpenGL.Extension.ARB.DrawInstanced
    Graphics.OpenGL.Extension.ARB.EnhancedLayouts
    Graphics.OpenGL.Extension.ARB.ExplicitAttribLocation
    Graphics.OpenGL.Extension.ARB.ExplicitUniformLocation
    Graphics.OpenGL.Extension.ARB.FragmentCoordConventions
    Graphics.OpenGL.Extension.ARB.FragmentLayerViewport
    Graphics.OpenGL.Extension.ARB.FragmentProgram
    Graphics.OpenGL.Extension.ARB.FragmentProgramShadow
    Graphics.OpenGL.Extension.ARB.FragmentShader
    Graphics.OpenGL.Extension.ARB.FramebufferNoAttachments
    Graphics.OpenGL.Extension.ARB.FramebufferObject
    Graphics.OpenGL.Extension.ARB.FramebufferSRGB
    Graphics.OpenGL.Extension.ARB.GeometryShader4
    Graphics.OpenGL.Extension.ARB.GetProgramBinary
    Graphics.OpenGL.Extension.ARB.GetTextureSubImage
    Graphics.OpenGL.Extension.ARB.GpuShader5
    Graphics.OpenGL.Extension.ARB.GpuShaderFp64
    Graphics.OpenGL.Extension.ARB.HalfFloatPixel
    Graphics.OpenGL.Extension.ARB.HalfFloatVertex
    Graphics.OpenGL.Extension.ARB.Imaging
    Graphics.OpenGL.Extension.ARB.IndirectParameters
    Graphics.OpenGL.Extension.ARB.InstancedArrays
    Graphics.OpenGL.Extension.ARB.InternalformatQuery
    Graphics.OpenGL.Extension.ARB.InternalformatQuery2
    Graphics.OpenGL.Extension.ARB.InvalidateSubdata
    Graphics.OpenGL.Extension.ARB.MapBufferAlignment
    Graphics.OpenGL.Extension.ARB.MapBufferRange
    Graphics.OpenGL.Extension.ARB.MatrixPalette
    Graphics.OpenGL.Extension.ARB.MultiBind
    Graphics.OpenGL.Extension.ARB.MultiDrawIndirect
    Graphics.OpenGL.Extension.ARB.Multisample
    Graphics.OpenGL.Extension.ARB.Multitexture
    Graphics.OpenGL.Extension.ARB.OcclusionQuery
    Graphics.OpenGL.Extension.ARB.OcclusionQuery2
    Graphics.OpenGL.Extension.ARB.PipelineStatisticsQuery
    Graphics.OpenGL.Extension.ARB.PixelBufferObject
    Graphics.OpenGL.Extension.ARB.PointParameters
    Graphics.OpenGL.Extension.ARB.PointSprite
    Graphics.OpenGL.Extension.ARB.ProgramInterfaceQuery
    Graphics.OpenGL.Extension.ARB.ProvokingVertex
    Graphics.OpenGL.Extension.ARB.QueryBufferObject
    Graphics.OpenGL.Extension.ARB.RobustBufferAccessBehavior
    Graphics.OpenGL.Extension.ARB.Robustness
    Graphics.OpenGL.Extension.ARB.RobustnessIsolation
    Graphics.OpenGL.Extension.ARB.SampleShading
    Graphics.OpenGL.Extension.ARB.SamplerObjects
    Graphics.OpenGL.Extension.ARB.SeamlessCubeMap
    Graphics.OpenGL.Extension.ARB.SeamlessCubemapPerTexture
    Graphics.OpenGL.Extension.ARB.SeparateShaderObjects
    Graphics.OpenGL.Extension.ARB.ShaderAtomicCounters
    Graphics.OpenGL.Extension.ARB.ShaderBitEncoding
    Graphics.OpenGL.Extension.ARB.ShaderDrawParameters
    Graphics.OpenGL.Extension.ARB.ShaderGroupVote
    Graphics.OpenGL.Extension.ARB.ShaderImageLoadStore
    Graphics.OpenGL.Extension.ARB.ShaderImageSize
    Graphics.OpenGL.Extension.ARB.ShaderObjects
    Graphics.OpenGL.Extension.ARB.ShaderPrecision
    Graphics.OpenGL.Extension.ARB.ShaderStencilExport
    Graphics.OpenGL.Extension.ARB.ShaderStorageBufferObject
    Graphics.OpenGL.Extension.ARB.ShaderSubroutine
    Graphics.OpenGL.Extension.ARB.ShaderTextureImageSamples
    Graphics.OpenGL.Extension.ARB.ShaderTextureLod
    Graphics.OpenGL.Extension.ARB.ShadingLanguage100
    Graphics.OpenGL.Extension.ARB.ShadingLanguage420pack
    Graphics.OpenGL.Extension.ARB.ShadingLanguageInclude
    Graphics.OpenGL.Extension.ARB.ShadingLanguagePacking
    Graphics.OpenGL.Extension.ARB.Shadow
    Graphics.OpenGL.Extension.ARB.ShadowAmbient
    Graphics.OpenGL.Extension.ARB.SparseBuffer
    Graphics.OpenGL.Extension.ARB.SparseTexture
    Graphics.OpenGL.Extension.ARB.StencilTexturing
    Graphics.OpenGL.Extension.ARB.Sync
    Graphics.OpenGL.Extension.ARB.TessellationShader
    Graphics.OpenGL.Extension.ARB.TextureBarrier
    Graphics.OpenGL.Extension.ARB.TextureBorderClamp
    Graphics.OpenGL.Extension.ARB.TextureBufferObject
    Graphics.OpenGL.Extension.ARB.TextureBufferObjectRgb32
    Graphics.OpenGL.Extension.ARB.TextureBufferRange
    Graphics.OpenGL.Extension.ARB.TextureCompression
    Graphics.OpenGL.Extension.ARB.TextureCompressionBptc
    Graphics.OpenGL.Extension.ARB.TextureCompressionRgtc
    Graphics.OpenGL.Extension.ARB.TextureCubeMap
    Graphics.OpenGL.Extension.ARB.TextureCubeMapArray
    Graphics.OpenGL.Extension.ARB.TextureEnvAdd
    Graphics.OpenGL.Extension.ARB.TextureEnvCombine
    Graphics.OpenGL.Extension.ARB.TextureEnvCrossbar
    Graphics.OpenGL.Extension.ARB.TextureEnvDot3
    Graphics.OpenGL.Extension.ARB.TextureFloat
    Graphics.OpenGL.Extension.ARB.TextureGather
    Graphics.OpenGL.Extension.ARB.TextureMirrorClampToEdge
    Graphics.OpenGL.Extension.ARB.TextureMirroredRepeat
    Graphics.OpenGL.Extension.ARB.TextureMultisample
    Graphics.OpenGL.Extension.ARB.TextureNonPowerOfTwo
    Graphics.OpenGL.Extension.ARB.TextureQueryLevels
    Graphics.OpenGL.Extension.ARB.TextureQueryLod
    Graphics.OpenGL.Extension.ARB.TextureRectangle
    Graphics.OpenGL.Extension.ARB.TextureRg
    Graphics.OpenGL.Extension.ARB.TextureRgb10A2ui
    Graphics.OpenGL.Extension.ARB.TextureStencil8
    Graphics.OpenGL.Extension.ARB.TextureStorage
    Graphics.OpenGL.Extension.ARB.TextureStorageMultisample
    Graphics.OpenGL.Extension.ARB.TextureSwizzle
    Graphics.OpenGL.Extension.ARB.TextureView
    Graphics.OpenGL.Extension.ARB.TimerQuery
    Graphics.OpenGL.Extension.ARB.TransformFeedback2
    Graphics.OpenGL.Extension.ARB.TransformFeedback3
    Graphics.OpenGL.Extension.ARB.TransformFeedbackInstanced
    Graphics.OpenGL.Extension.ARB.TransformFeedbackOverflowQuery
    Graphics.OpenGL.Extension.ARB.TransposeMatrix
    Graphics.OpenGL.Extension.ARB.UniformBufferObject
    Graphics.OpenGL.Extension.ARB.VertexArrayBgra
    Graphics.OpenGL.Extension.ARB.VertexArrayObject
    Graphics.OpenGL.Extension.ARB.VertexAttrib64bit
    Graphics.OpenGL.Extension.ARB.VertexAttribBinding
    Graphics.OpenGL.Extension.ARB.VertexBlend
    Graphics.OpenGL.Extension.ARB.VertexBufferObject
    Graphics.OpenGL.Extension.ARB.VertexProgram
    Graphics.OpenGL.Extension.ARB.VertexShader
    Graphics.OpenGL.Extension.ARB.VertexType10f11f11fRev
    Graphics.OpenGL.Extension.ARB.VertexType2101010Rev
    Graphics.OpenGL.Extension.ARB.ViewportArray
    Graphics.OpenGL.Extension.ARB.WindowPos
    Graphics.OpenGL.Extension.ARM
    Graphics.OpenGL.Extension.ARM.MaliProgramBinary
    Graphics.OpenGL.Extension.ARM.MaliShaderBinary
    Graphics.OpenGL.Extension.ARM.Rgba8
    Graphics.OpenGL.Extension.ARM.ShaderFramebufferFetch
    Graphics.OpenGL.Extension.ARM.ShaderFramebufferFetchDepthStencil
    Graphics.OpenGL.Extension.ATI
    Graphics.OpenGL.Extension.ATI.DrawBuffers
    Graphics.OpenGL.Extension.ATI.ElementArray
    Graphics.OpenGL.Extension.ATI.EnvmapBumpmap
    Graphics.OpenGL.Extension.ATI.FragmentShader
    Graphics.OpenGL.Extension.ATI.MapObjectBuffer
    Graphics.OpenGL.Extension.ATI.Meminfo
    Graphics.OpenGL.Extension.ATI.PixelFormatFloat
    Graphics.OpenGL.Extension.ATI.PnTriangles
    Graphics.OpenGL.Extension.ATI.SeparateStencil
    Graphics.OpenGL.Extension.ATI.TextFragmentShader
    Graphics.OpenGL.Extension.ATI.TextureEnvCombine3
    Graphics.OpenGL.Extension.ATI.TextureFloat
    Graphics.OpenGL.Extension.ATI.TextureMirrorOnce
    Graphics.OpenGL.Extension.ATI.VertexArrayObject
    Graphics.OpenGL.Extension.ATI.VertexAttribArrayObject
    Graphics.OpenGL.Extension.ATI.VertexStreams
    Graphics.OpenGL.Extension.DMP
    Graphics.OpenGL.Extension.DMP.ProgramBinary
    Graphics.OpenGL.Extension.DMP.ShaderBinary
    Graphics.OpenGL.Extension.EXT
    Graphics.OpenGL.Extension.EXT.FourTwoTwoPixels
    Graphics.OpenGL.Extension.EXT.Abgr
    Graphics.OpenGL.Extension.EXT.Bgra
    Graphics.OpenGL.Extension.EXT.BindableUniform
    Graphics.OpenGL.Extension.EXT.BlendColor
    Graphics.OpenGL.Extension.EXT.BlendEquationSeparate
    Graphics.OpenGL.Extension.EXT.BlendFuncSeparate
    Graphics.OpenGL.Extension.EXT.BlendLogicOp
    Graphics.OpenGL.Extension.EXT.BlendMinmax
    Graphics.OpenGL.Extension.EXT.BlendSubtract
    Graphics.OpenGL.Extension.EXT.ClipVolumeHint
    Graphics.OpenGL.Extension.EXT.Cmyka
    Graphics.OpenGL.Extension.EXT.ColorBufferHalfFloat
    Graphics.OpenGL.Extension.EXT.ColorSubtable
    Graphics.OpenGL.Extension.EXT.CompiledVertexArray
    Graphics.OpenGL.Extension.EXT.Convolution
    Graphics.OpenGL.Extension.EXT.CoordinateFrame
    Graphics.OpenGL.Extension.EXT.CopyImage
    Graphics.OpenGL.Extension.EXT.CopyTexture
    Graphics.OpenGL.Extension.EXT.CullVertex
    Graphics.OpenGL.Extension.EXT.DebugLabel
    Graphics.OpenGL.Extension.EXT.DebugMarker
    Graphics.OpenGL.Extension.EXT.DepthBoundsTest
    Graphics.OpenGL.Extension.EXT.DirectStateAccess
    Graphics.OpenGL.Extension.EXT.DiscardFramebuffer
    Graphics.OpenGL.Extension.EXT.DisjointTimerQuery
    Graphics.OpenGL.Extension.EXT.DrawBuffers
    Graphics.OpenGL.Extension.EXT.DrawBuffers2
    Graphics.OpenGL.Extension.EXT.DrawBuffersIndexed
    Graphics.OpenGL.Extension.EXT.DrawInstanced
    Graphics.OpenGL.Extension.EXT.DrawRangeElements
    Graphics.OpenGL.Extension.EXT.FogCoord
    Graphics.OpenGL.Extension.EXT.FramebufferBlit
    Graphics.OpenGL.Extension.EXT.FramebufferMultisample
    Graphics.OpenGL.Extension.EXT.FramebufferMultisampleBlitScaled
    Graphics.OpenGL.Extension.EXT.FramebufferObject
    Graphics.OpenGL.Extension.EXT.FramebufferSRGB
    Graphics.OpenGL.Extension.EXT.GeometryPointSize
    Graphics.OpenGL.Extension.EXT.GeometryShader
    Graphics.OpenGL.Extension.EXT.GeometryShader4
    Graphics.OpenGL.Extension.EXT.GpuProgramParameters
    Graphics.OpenGL.Extension.EXT.GpuShader4
    Graphics.OpenGL.Extension.EXT.GpuShader5
    Graphics.OpenGL.Extension.EXT.Histogram
    Graphics.OpenGL.Extension.EXT.IndexArrayFormats
    Graphics.OpenGL.Extension.EXT.IndexFunc
    Graphics.OpenGL.Extension.EXT.IndexMaterial
    Graphics.OpenGL.Extension.EXT.IndexTexture
    Graphics.OpenGL.Extension.EXT.InstancedArrays
    Graphics.OpenGL.Extension.EXT.LightTexture
    Graphics.OpenGL.Extension.EXT.MapBufferRange
    Graphics.OpenGL.Extension.EXT.MiscAttribute
    Graphics.OpenGL.Extension.EXT.MultiDrawArrays
    Graphics.OpenGL.Extension.EXT.Multisample
    Graphics.OpenGL.Extension.EXT.MultisampledRenderToTexture
    Graphics.OpenGL.Extension.EXT.MultiviewDrawBuffers
    Graphics.OpenGL.Extension.EXT.OcclusionQueryBoolean
    Graphics.OpenGL.Extension.EXT.PackedDepthStencil
    Graphics.OpenGL.Extension.EXT.PackedFloat
    Graphics.OpenGL.Extension.EXT.PackedPixels
    Graphics.OpenGL.Extension.EXT.PalettedTexture
    Graphics.OpenGL.Extension.EXT.PixelBufferObject
    Graphics.OpenGL.Extension.EXT.PixelTransform
    Graphics.OpenGL.Extension.EXT.PixelTransformColorTable
    Graphics.OpenGL.Extension.EXT.PointParameters
    Graphics.OpenGL.Extension.EXT.PolygonOffset
    Graphics.OpenGL.Extension.EXT.PolygonOffsetClamp
    Graphics.OpenGL.Extension.EXT.PostDepthCoverage
    Graphics.OpenGL.Extension.EXT.PrimitiveBoundingBox
    Graphics.OpenGL.Extension.EXT.ProvokingVertex
    Graphics.OpenGL.Extension.EXT.PvrtcSRGB
    Graphics.OpenGL.Extension.EXT.RasterMultisample
    Graphics.OpenGL.Extension.EXT.ReadFormatBgra
    Graphics.OpenGL.Extension.EXT.RescaleNormal
    Graphics.OpenGL.Extension.EXT.Robustness
    Graphics.OpenGL.Extension.EXT.SRGB
    Graphics.OpenGL.Extension.EXT.SRGBWriteControl
    Graphics.OpenGL.Extension.EXT.SecondaryColor
    Graphics.OpenGL.Extension.EXT.SeparateShaderObjects
    Graphics.OpenGL.Extension.EXT.SeparateSpecularColor
    Graphics.OpenGL.Extension.EXT.ShaderFramebufferFetch
    Graphics.OpenGL.Extension.EXT.ShaderImageLoadFormatted
    Graphics.OpenGL.Extension.EXT.ShaderImageLoadStore
    Graphics.OpenGL.Extension.EXT.ShaderImplicitConversions
    Graphics.OpenGL.Extension.EXT.ShaderIntegerMix
    Graphics.OpenGL.Extension.EXT.ShaderIoBlocks
    Graphics.OpenGL.Extension.EXT.ShaderPixelLocalStorage
    Graphics.OpenGL.Extension.EXT.ShaderTextureLod
    Graphics.OpenGL.Extension.EXT.ShadowFuncs
    Graphics.OpenGL.Extension.EXT.ShadowSamplers
    Graphics.OpenGL.Extension.EXT.SharedTexturePalette
    Graphics.OpenGL.Extension.EXT.SparseTexture2
    Graphics.OpenGL.Extension.EXT.StencilClearTag
    Graphics.OpenGL.Extension.EXT.StencilTwoSide
    Graphics.OpenGL.Extension.EXT.StencilWrap
    Graphics.OpenGL.Extension.EXT.Subtexture
    Graphics.OpenGL.Extension.EXT.TessellationPointSize
    Graphics.OpenGL.Extension.EXT.TessellationShader
    Graphics.OpenGL.Extension.EXT.Texture
    Graphics.OpenGL.Extension.EXT.Texture3D
    Graphics.OpenGL.Extension.EXT.TextureArray
    Graphics.OpenGL.Extension.EXT.TextureBorderClamp
    Graphics.OpenGL.Extension.EXT.TextureBuffer
    Graphics.OpenGL.Extension.EXT.TextureBufferObject
    Graphics.OpenGL.Extension.EXT.TextureCompressionDxt1
    Graphics.OpenGL.Extension.EXT.TextureCompressionLatc
    Graphics.OpenGL.Extension.EXT.TextureCompressionRgtc
    Graphics.OpenGL.Extension.EXT.TextureCompressionS3tc
    Graphics.OpenGL.Extension.EXT.TextureCubeMap
    Graphics.OpenGL.Extension.EXT.TextureCubeMapArray
    Graphics.OpenGL.Extension.EXT.TextureEnvAdd
    Graphics.OpenGL.Extension.EXT.TextureEnvCombine
    Graphics.OpenGL.Extension.EXT.TextureEnvDot3
    Graphics.OpenGL.Extension.EXT.TextureFilterAnisotropic
    Graphics.OpenGL.Extension.EXT.TextureFilterMinmax
    Graphics.OpenGL.Extension.EXT.TextureFormatBGRA8888
    Graphics.OpenGL.Extension.EXT.TextureInteger
    Graphics.OpenGL.Extension.EXT.TextureLodBias
    Graphics.OpenGL.Extension.EXT.TextureMirrorClamp
    Graphics.OpenGL.Extension.EXT.TextureObject
    Graphics.OpenGL.Extension.EXT.TexturePerturbNormal
    Graphics.OpenGL.Extension.EXT.TextureRg
    Graphics.OpenGL.Extension.EXT.TextureSRGB
    Graphics.OpenGL.Extension.EXT.TextureSRGBDecode
    Graphics.OpenGL.Extension.EXT.TextureSharedExponent
    Graphics.OpenGL.Extension.EXT.TextureSnorm
    Graphics.OpenGL.Extension.EXT.TextureStorage
    Graphics.OpenGL.Extension.EXT.TextureSwizzle
    Graphics.OpenGL.Extension.EXT.TextureType2101010REV
    Graphics.OpenGL.Extension.EXT.TextureView
    Graphics.OpenGL.Extension.EXT.TimerQuery
    Graphics.OpenGL.Extension.EXT.TransformFeedback
    Graphics.OpenGL.Extension.EXT.UnpackSubimage
    Graphics.OpenGL.Extension.EXT.VertexArray
    Graphics.OpenGL.Extension.EXT.VertexArrayBgra
    Graphics.OpenGL.Extension.EXT.VertexAttrib64bit
    Graphics.OpenGL.Extension.EXT.VertexShader
    Graphics.OpenGL.Extension.EXT.VertexWeighting
    Graphics.OpenGL.Extension.EXT.X11SyncObject
    Graphics.OpenGL.Extension.FJ
    Graphics.OpenGL.Extension.FJ.ShaderBinaryGCCSO
    Graphics.OpenGL.Extension.GREMEDY
    Graphics.OpenGL.Extension.GREMEDY.FrameTerminator
    Graphics.OpenGL.Extension.GREMEDY.StringMarker
    Graphics.OpenGL.Extension.HP
    Graphics.OpenGL.Extension.HP.ConvolutionBorderModes
    Graphics.OpenGL.Extension.HP.ImageTransform
    Graphics.OpenGL.Extension.HP.OcclusionTest
    Graphics.OpenGL.Extension.HP.TextureLighting
    Graphics.OpenGL.Extension.IBM
    Graphics.OpenGL.Extension.IBM.CullVertex
    Graphics.OpenGL.Extension.IBM.MultimodeDrawArrays
    Graphics.OpenGL.Extension.IBM.RasterposClip
    Graphics.OpenGL.Extension.IBM.StaticData
    Graphics.OpenGL.Extension.IBM.TextureMirroredRepeat
    Graphics.OpenGL.Extension.IBM.VertexArrayLists
    Graphics.OpenGL.Extension.IMG
    Graphics.OpenGL.Extension.IMG.MultisampledRenderToTexture
    Graphics.OpenGL.Extension.IMG.ProgramBinary
    Graphics.OpenGL.Extension.IMG.ReadFormat
    Graphics.OpenGL.Extension.IMG.ShaderBinary
    Graphics.OpenGL.Extension.IMG.TextureCompressionPvrtc
    Graphics.OpenGL.Extension.IMG.TextureCompressionPvrtc2
    Graphics.OpenGL.Extension.IMG.TextureEnvEnhancedFixedFunction
    Graphics.OpenGL.Extension.IMG.UserClipPlane
    Graphics.OpenGL.Extension.INGR
    Graphics.OpenGL.Extension.INGR.BlendFuncSeparate
    Graphics.OpenGL.Extension.INGR.ColorClamp
    Graphics.OpenGL.Extension.INGR.InterlaceRead
    Graphics.OpenGL.Extension.INTEL
    Graphics.OpenGL.Extension.INTEL.FragmentShaderOrdering
    Graphics.OpenGL.Extension.INTEL.MapTexture
    Graphics.OpenGL.Extension.INTEL.ParallelArrays
    Graphics.OpenGL.Extension.INTEL.PerformanceQuery
    Graphics.OpenGL.Extension.KHR
    Graphics.OpenGL.Extension.KHR.BlendEquationAdvanced
    Graphics.OpenGL.Extension.KHR.BlendEquationAdvancedCoherent
    Graphics.OpenGL.Extension.KHR.ContextFlushControl
    Graphics.OpenGL.Extension.KHR.Debug
    Graphics.OpenGL.Extension.KHR.RobustBufferAccessBehavior
    Graphics.OpenGL.Extension.KHR.Robustness
    Graphics.OpenGL.Extension.KHR.TextureCompressionAstcHdr
    Graphics.OpenGL.Extension.KHR.TextureCompressionAstcLdr
    Graphics.OpenGL.Extension.MESAX
    Graphics.OpenGL.Extension.MESAX.TextureStack
    Graphics.OpenGL.Extension.MESA
    Graphics.OpenGL.Extension.MESA.PackInvert
    Graphics.OpenGL.Extension.MESA.ResizeBuffers
    Graphics.OpenGL.Extension.MESA.WindowPos
    Graphics.OpenGL.Extension.MESA.YcbcrTexture
    Graphics.OpenGL.Extension.NVX
    Graphics.OpenGL.Extension.NVX.ConditionalRender
    Graphics.OpenGL.Extension.NVX.GpuMemoryInfo
    Graphics.OpenGL.Extension.NV
    Graphics.OpenGL.Extension.NV.BindlessMultiDrawIndirect
    Graphics.OpenGL.Extension.NV.BindlessMultiDrawIndirectCount
    Graphics.OpenGL.Extension.NV.BindlessTexture
    Graphics.OpenGL.Extension.NV.BlendEquationAdvanced
    Graphics.OpenGL.Extension.NV.BlendEquationAdvancedCoherent
    Graphics.OpenGL.Extension.NV.BlendSquare
    Graphics.OpenGL.Extension.NV.ComputeProgram5
    Graphics.OpenGL.Extension.NV.ConditionalRender
    Graphics.OpenGL.Extension.NV.ConservativeRaster
    Graphics.OpenGL.Extension.NV.CopyBuffer
    Graphics.OpenGL.Extension.NV.CopyDepthToColor
    Graphics.OpenGL.Extension.NV.CopyImage
    Graphics.OpenGL.Extension.NV.CoverageSample
    Graphics.OpenGL.Extension.NV.DeepTexture3D
    Graphics.OpenGL.Extension.NV.DepthBufferFloat
    Graphics.OpenGL.Extension.NV.DepthClamp
    Graphics.OpenGL.Extension.NV.DepthNonlinear
    Graphics.OpenGL.Extension.NV.DrawBuffers
    Graphics.OpenGL.Extension.NV.DrawInstanced
    Graphics.OpenGL.Extension.NV.DrawTexture
    Graphics.OpenGL.Extension.NV.Evaluators
    Graphics.OpenGL.Extension.NV.ExplicitAttribLocation
    Graphics.OpenGL.Extension.NV.ExplicitMultisample
    Graphics.OpenGL.Extension.NV.FboColorAttachments
    Graphics.OpenGL.Extension.NV.Fence
    Graphics.OpenGL.Extension.NV.FillRectangle
    Graphics.OpenGL.Extension.NV.FloatBuffer
    Graphics.OpenGL.Extension.NV.FogDistance
    Graphics.OpenGL.Extension.NV.FragmentCoverageToColor
    Graphics.OpenGL.Extension.NV.FragmentProgram
    Graphics.OpenGL.Extension.NV.FragmentProgram2
    Graphics.OpenGL.Extension.NV.FragmentProgram4
    Graphics.OpenGL.Extension.NV.FragmentProgramOption
    Graphics.OpenGL.Extension.NV.FragmentShaderInterlock
    Graphics.OpenGL.Extension.NV.FramebufferBlit
    Graphics.OpenGL.Extension.NV.FramebufferMixedSamples
    Graphics.OpenGL.Extension.NV.FramebufferMultisample
    Graphics.OpenGL.Extension.NV.FramebufferMultisampleCoverage
    Graphics.OpenGL.Extension.NV.GenerateMipmapSRGB
    Graphics.OpenGL.Extension.NV.GeometryProgram4
    Graphics.OpenGL.Extension.NV.GeometryShader4
    Graphics.OpenGL.Extension.NV.GeometryShaderPassthrough
    Graphics.OpenGL.Extension.NV.GpuProgram4
    Graphics.OpenGL.Extension.NV.GpuProgram5
    Graphics.OpenGL.Extension.NV.GpuProgram5MemExtended
    Graphics.OpenGL.Extension.NV.GpuShader5
    Graphics.OpenGL.Extension.NV.HalfFloat
    Graphics.OpenGL.Extension.NV.InstancedArrays
    Graphics.OpenGL.Extension.NV.LightMaxExponent
    Graphics.OpenGL.Extension.NV.MultisampleCoverage
    Graphics.OpenGL.Extension.NV.MultisampleFilterHint
    Graphics.OpenGL.Extension.NV.NonSquareMatrices
    Graphics.OpenGL.Extension.NV.OcclusionQuery
    Graphics.OpenGL.Extension.NV.PackedDepthStencil
    Graphics.OpenGL.Extension.NV.ParameterBufferObject
    Graphics.OpenGL.Extension.NV.ParameterBufferObject2
    Graphics.OpenGL.Extension.NV.PathRendering
    Graphics.OpenGL.Extension.NV.PixelDataRange
    Graphics.OpenGL.Extension.NV.PointSprite
    Graphics.OpenGL.Extension.NV.PresentVideo
    Graphics.OpenGL.Extension.NV.PrimitiveRestart
    Graphics.OpenGL.Extension.NV.ReadBuffer
    Graphics.OpenGL.Extension.NV.ReadBufferFront
    Graphics.OpenGL.Extension.NV.ReadDepth
    Graphics.OpenGL.Extension.NV.ReadDepthStencil
    Graphics.OpenGL.Extension.NV.ReadStencil
    Graphics.OpenGL.Extension.NV.RegisterCombiners
    Graphics.OpenGL.Extension.NV.PathRenderingSharedEdge
    Graphics.OpenGL.Extension.NV.RegisterCombiners2
    Graphics.OpenGL.Extension.NV.SRGBFormats
    Graphics.OpenGL.Extension.NV.SampleLocations
    Graphics.OpenGL.Extension.NV.SampleMaskOverrideCoverage
    Graphics.OpenGL.Extension.NV.ShaderAtomicCounters
    Graphics.OpenGL.Extension.NV.ShaderAtomicFloat
    Graphics.OpenGL.Extension.NV.ShaderAtomicFp16Vector
    Graphics.OpenGL.Extension.NV.ShaderAtomicInt64
    Graphics.OpenGL.Extension.NV.ShaderBufferLoad
    Graphics.OpenGL.Extension.NV.ShaderBufferStore
    Graphics.OpenGL.Extension.NV.ShaderStorageBufferObject
    Graphics.OpenGL.Extension.NV.ShaderThreadGroup
    Graphics.OpenGL.Extension.NV.ShaderThreadShuffle
    Graphics.OpenGL.Extension.NV.ShadowSamplersArray
    Graphics.OpenGL.Extension.NV.ShadowSamplersCube
    Graphics.OpenGL.Extension.NV.TessellationProgram5
    Graphics.OpenGL.Extension.NV.TexgenEmboss
    Graphics.OpenGL.Extension.NV.TexgenReflection
    Graphics.OpenGL.Extension.NV.TextureBarrier
    Graphics.OpenGL.Extension.NV.TextureBorderClamp
    Graphics.OpenGL.Extension.NV.TextureCompressionS3tcUpdate
    Graphics.OpenGL.Extension.NV.TextureCompressionVtc
    Graphics.OpenGL.Extension.NV.TextureEnvCombine4
    Graphics.OpenGL.Extension.NV.TextureExpandNormal
    Graphics.OpenGL.Extension.NV.TextureMultisample
    Graphics.OpenGL.Extension.NV.TextureNpot2DMipmap
    Graphics.OpenGL.Extension.NV.TextureRectangle
    Graphics.OpenGL.Extension.NV.TextureShader
    Graphics.OpenGL.Extension.NV.TextureShader2
    Graphics.OpenGL.Extension.NV.TextureShader3
    Graphics.OpenGL.Extension.NV.TransformFeedback
    Graphics.OpenGL.Extension.NV.TransformFeedback2
    Graphics.OpenGL.Extension.NV.UniformBufferUnifiedMemory
    Graphics.OpenGL.Extension.NV.VdpauInterop
    Graphics.OpenGL.Extension.NV.VertexArrayRange
    Graphics.OpenGL.Extension.NV.VertexArrayRange2
    Graphics.OpenGL.Extension.NV.VertexAttribInteger64bit
    Graphics.OpenGL.Extension.NV.VertexBufferUnifiedMemory
    Graphics.OpenGL.Extension.NV.VertexProgram
    Graphics.OpenGL.Extension.NV.VertexProgram11
    Graphics.OpenGL.Extension.NV.VertexProgram2
    Graphics.OpenGL.Extension.NV.VertexProgram2Option
    Graphics.OpenGL.Extension.NV.VertexProgram3
    Graphics.OpenGL.Extension.NV.VertexProgram4
    Graphics.OpenGL.Extension.NV.VideoCapture
    Graphics.OpenGL.Extension.OES
    Graphics.OpenGL.Extension.OES.EGLImage
    Graphics.OpenGL.Extension.OES.EGLImageExternal
    Graphics.OpenGL.Extension.OES.BlendEquationSeparate
    Graphics.OpenGL.Extension.OES.BlendFuncSeparate
    Graphics.OpenGL.Extension.OES.BlendSubtract
    Graphics.OpenGL.Extension.OES.ByteCoordinates
    Graphics.OpenGL.Extension.OES.CompressedETC1RGB8SubTexture
    Graphics.OpenGL.Extension.OES.CompressedETC1RGB8Texture
    Graphics.OpenGL.Extension.OES.CompressedPalettedTexture
    Graphics.OpenGL.Extension.OES.Depth24
    Graphics.OpenGL.Extension.OES.Depth32
    Graphics.OpenGL.Extension.OES.DepthTexture
    Graphics.OpenGL.Extension.OES.DrawTexture
    Graphics.OpenGL.Extension.OES.ElementIndexUint
    Graphics.OpenGL.Extension.OES.ExtendedMatrixPalette
    Graphics.OpenGL.Extension.OES.FboRenderMipmap
    Graphics.OpenGL.Extension.OES.FixedPoint
    Graphics.OpenGL.Extension.OES.FragmentPrecisionHigh
    Graphics.OpenGL.Extension.OES.FramebufferObject
    Graphics.OpenGL.Extension.OES.GetProgramBinary
    Graphics.OpenGL.Extension.OES.Mapbuffer
    Graphics.OpenGL.Extension.OES.MatrixGet
    Graphics.OpenGL.Extension.OES.MatrixPalette
    Graphics.OpenGL.Extension.OES.PackedDepthStencil
    Graphics.OpenGL.Extension.OES.PointSizeArray
    Graphics.OpenGL.Extension.OES.PointSprite
    Graphics.OpenGL.Extension.OES.QueryMatrix
    Graphics.OpenGL.Extension.OES.ReadFormat
    Graphics.OpenGL.Extension.OES.RequiredInternalformat
    Graphics.OpenGL.Extension.OES.Rgb8Rgba8
    Graphics.OpenGL.Extension.OES.SampleShading
    Graphics.OpenGL.Extension.OES.SampleVariables
    Graphics.OpenGL.Extension.OES.ShaderImageAtomic
    Graphics.OpenGL.Extension.OES.ShaderMultisampleInterpolation
    Graphics.OpenGL.Extension.OES.SinglePrecision
    Graphics.OpenGL.Extension.OES.StandardDerivatives
    Graphics.OpenGL.Extension.OES.Stencil1
    Graphics.OpenGL.Extension.OES.Stencil4
    Graphics.OpenGL.Extension.OES.Stencil8
    Graphics.OpenGL.Extension.OES.StencilWrap
    Graphics.OpenGL.Extension.OES.SurfacelessContext
    Graphics.OpenGL.Extension.OES.Texture3D
    Graphics.OpenGL.Extension.OES.TextureCompressionAstc
    Graphics.OpenGL.Extension.OES.TextureCubeMap
    Graphics.OpenGL.Extension.OES.TextureEnvCrossbar
    Graphics.OpenGL.Extension.OES.TextureFloat
    Graphics.OpenGL.Extension.OES.TextureFloatLinear
    Graphics.OpenGL.Extension.OES.TextureHalfFloat
    Graphics.OpenGL.Extension.OES.TextureHalfFloatLinear
    Graphics.OpenGL.Extension.OES.TextureMirroredRepeat
    Graphics.OpenGL.Extension.OES.TextureNpot
    Graphics.OpenGL.Extension.OES.TextureStencil8
    Graphics.OpenGL.Extension.OES.TextureStorageMultisample2dArray
    Graphics.OpenGL.Extension.OES.VertexArrayObject
    Graphics.OpenGL.Extension.OES.VertexHalfFloat
    Graphics.OpenGL.Extension.OES.VertexType1010102
    Graphics.OpenGL.Extension.OML
    Graphics.OpenGL.Extension.OML.Interlace
    Graphics.OpenGL.Extension.OML.Resample
    Graphics.OpenGL.Extension.OML.Subsample
    Graphics.OpenGL.Extension.PGI
    Graphics.OpenGL.Extension.PGI.MiscHints
    Graphics.OpenGL.Extension.PGI.VertexHints
    Graphics.OpenGL.Extension.QCOM
    Graphics.OpenGL.Extension.QCOM.AlphaTest
    Graphics.OpenGL.Extension.QCOM.BinningControl
    Graphics.OpenGL.Extension.QCOM.DriverControl
    Graphics.OpenGL.Extension.QCOM.ExtendedGet
    Graphics.OpenGL.Extension.QCOM.ExtendedGet2
    Graphics.OpenGL.Extension.QCOM.PerfmonGlobalMode
    Graphics.OpenGL.Extension.QCOM.TiledRendering
    Graphics.OpenGL.Extension.QCOM.WriteonlyRendering
    Graphics.OpenGL.Extension.REND
    Graphics.OpenGL.Extension.REND.ScreenCoordinates
    Graphics.OpenGL.Extension.S3
    Graphics.OpenGL.Extension.S3.S3tc
    Graphics.OpenGL.Extension.SGIS
    Graphics.OpenGL.Extension.SGIS.DetailTexture
    Graphics.OpenGL.Extension.SGIS.FogFunction
    Graphics.OpenGL.Extension.SGIS.GenerateMipmap
    Graphics.OpenGL.Extension.SGIS.Multisample
    Graphics.OpenGL.Extension.SGIS.PixelTexture
    Graphics.OpenGL.Extension.SGIS.PointLineTexgen
    Graphics.OpenGL.Extension.SGIS.PointParameters
    Graphics.OpenGL.Extension.SGIS.SharpenTexture
    Graphics.OpenGL.Extension.SGIS.Texture4D
    Graphics.OpenGL.Extension.SGIS.TextureBorderClamp
    Graphics.OpenGL.Extension.SGIS.TextureColorMask
    Graphics.OpenGL.Extension.SGIS.TextureEdgeClamp
    Graphics.OpenGL.Extension.SGIS.TextureFilter4
    Graphics.OpenGL.Extension.SGIS.TextureLod
    Graphics.OpenGL.Extension.SGIS.TextureSelect
    Graphics.OpenGL.Extension.SGIX
    Graphics.OpenGL.Extension.SGIX.Async
    Graphics.OpenGL.Extension.SGIX.AsyncHistogram
    Graphics.OpenGL.Extension.SGIX.AsyncPixel
    Graphics.OpenGL.Extension.SGIX.BlendAlphaMinmax
    Graphics.OpenGL.Extension.SGIX.CalligraphicFragment
    Graphics.OpenGL.Extension.SGIX.Clipmap
    Graphics.OpenGL.Extension.SGIX.ConvolutionAccuracy
    Graphics.OpenGL.Extension.SGIX.DepthPassInstrument
    Graphics.OpenGL.Extension.SGIX.DepthTexture
    Graphics.OpenGL.Extension.SGIX.FlushRaster
    Graphics.OpenGL.Extension.SGIX.FogOffset
    Graphics.OpenGL.Extension.SGIX.FragmentLighting
    Graphics.OpenGL.Extension.SGIX.Framezoom
    Graphics.OpenGL.Extension.SGIX.IglooInterface
    Graphics.OpenGL.Extension.SGIX.Instruments
    Graphics.OpenGL.Extension.SGIX.Interlace
    Graphics.OpenGL.Extension.SGIX.IrInstrument1
    Graphics.OpenGL.Extension.SGIX.ListPriority
    Graphics.OpenGL.Extension.SGIX.PixelTexture
    Graphics.OpenGL.Extension.SGIX.PixelTiles
    Graphics.OpenGL.Extension.SGIX.PolynomialFfd
    Graphics.OpenGL.Extension.SGIX.ReferencePlane
    Graphics.OpenGL.Extension.SGIX.Resample
    Graphics.OpenGL.Extension.SGIX.ScalebiasHint
    Graphics.OpenGL.Extension.SGIX.Shadow
    Graphics.OpenGL.Extension.SGIX.ShadowAmbient
    Graphics.OpenGL.Extension.SGIX.Sprite
    Graphics.OpenGL.Extension.SGIX.Subsample
    Graphics.OpenGL.Extension.SGIX.TagSampleBuffer
    Graphics.OpenGL.Extension.SGIX.TextureAddEnv
    Graphics.OpenGL.Extension.SGIX.TextureCoordinateClamp
    Graphics.OpenGL.Extension.SGIX.TextureLodBias
    Graphics.OpenGL.Extension.SGIX.TextureMultiBuffer
    Graphics.OpenGL.Extension.SGIX.TextureScaleBias
    Graphics.OpenGL.Extension.SGIX.VertexPreclip
    Graphics.OpenGL.Extension.SGIX.Ycrcb
    Graphics.OpenGL.Extension.SGIX.YcrcbSubsample
    Graphics.OpenGL.Extension.SGIX.Ycrcba
    Graphics.OpenGL.Extension.SGI
    Graphics.OpenGL.Extension.SGI.ColorMatrix
    Graphics.OpenGL.Extension.SGI.ColorTable
    Graphics.OpenGL.Extension.SGI.TextureColorTable
    Graphics.OpenGL.Extension.SUNX
    Graphics.OpenGL.Extension.SUNX.ConstantData
    Graphics.OpenGL.Extension.SUN
    Graphics.OpenGL.Extension.SUN.ConvolutionBorderModes
    Graphics.OpenGL.Extension.SUN.GlobalAlpha
    Graphics.OpenGL.Extension.SUN.MeshArray
    Graphics.OpenGL.Extension.SUN.SliceAccum
    Graphics.OpenGL.Extension.SUN.TriangleList
    Graphics.OpenGL.Extension.SUN.Vertex
    Graphics.OpenGL.Extension.VIV
    Graphics.OpenGL.Extension.VIV.ShaderBinary
    Graphics.OpenGL.Extension.WIN
    Graphics.OpenGL.Extension.WIN.PhongShading
    Graphics.OpenGL.Extension.WIN.SpecularFog
    Graphics.OpenGL.Profile.Compatibility32
    Graphics.OpenGL.Profile.Compatibility33
    Graphics.OpenGL.Profile.Compatibility40
    Graphics.OpenGL.Profile.Compatibility41
    Graphics.OpenGL.Profile.Compatibility42
    Graphics.OpenGL.Profile.Compatibility43
    Graphics.OpenGL.Profile.Compatibility44
    Graphics.OpenGL.Profile.Compatibility45
    Graphics.OpenGL.Profile.Core32
    Graphics.OpenGL.Profile.Core33
    Graphics.OpenGL.Profile.Core40
    Graphics.OpenGL.Profile.Core41
    Graphics.OpenGL.Profile.Core42
    Graphics.OpenGL.Profile.Core43
    Graphics.OpenGL.Profile.Core44
    Graphics.OpenGL.Profile.Core45
    Graphics.OpenGL.Profile.EmbeddedCommon11
    Graphics.OpenGL.Profile.EmbeddedLite11
    Graphics.OpenGL.Profile.Embedded20
    Graphics.OpenGL.Profile.Embedded30
    Graphics.OpenGL.Profile.Embedded31
    Graphics.OpenGL.Profile.Standard10
    Graphics.OpenGL.Profile.Standard11
    Graphics.OpenGL.Profile.Standard12
    Graphics.OpenGL.Profile.Standard13
    Graphics.OpenGL.Profile.Standard14
    Graphics.OpenGL.Profile.Standard15
    Graphics.OpenGL.Profile.Standard20
    Graphics.OpenGL.Profile.Standard21
    Graphics.OpenGL.Profile.Standard30
    Graphics.OpenGL.Profile.Standard31

  other-modules:
    Graphics.OpenGL.Internal.Scope
    Graphics.OpenGL.Internal.Shared

  build-depends:
      base == 4.*
    , mtl >= 2.1 && < 2.3
    , vector == 0.10.*

  default-language:
    Haskell2010

executable opengl-wrangler-gen
  hs-source-dirs:
    gen

  main-is:
    Main.hs

  other-modules:
    Generator
    Module
    Parser
    Registry

  default-extensions:
    Arrows

  build-depends:
      base == 4.*
    , containers == 0.5.*
    , directory == 1.2.*
    , hxt == 9.3.*
    , MissingH == 1.2.*
    , mtl >= 2.1 && < 2.3

  default-language:
    Haskell2010
